...
    "Buttons" : {

    },
    "Call driver" : {

    },
    "Cancel" : {

    },
    "Cancel Order" : {

    },
    "Cards" : {

    },
    "Cart" : {

    },
    "Cart is empty. Start shopping to add items." : {

    },
    "Categories" : {
...
            "value" : "Hinzufügen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Add"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Agregar"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ajouter"
...
            "value" : "Cancel"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancelar"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Annuler"
...

    },
    "Don't worry! You can still use MimiSupply while offline. Your changes will be saved and synced when you reconnect." : {
      "comment" : "A description of the benefits of using MimiSupply offline.",
      "isCommentAutoGenerated" : true
    },
    "Done" : {

    },
    "Double tap to pay with Apple Pay" : {

    },
    "Drive" : {
...
    "Estimated Delivery" : {

    },
    "ETA: %@" : {

    },
    "Explore" : {

    },
    "Export Logs" : {
      "comment" : "A button that allows exporting logs.",
      "isCommentAutoGenerated" : true
    },
...
    "Kunden:" : {

    },
    "Label Small" : {

    },
    "Language" : {

    },
    "Last Sync:" : {
      "comment" : "A label describing the last time the app successfully synchronized with the server.",
      "isCommentAutoGenerated" : true
    },
...
    "Order Confirmed!" : {

    },
    "Order Details" : {

    },
    "Order History" : {

    },
    "Order ID" : {

    },
    "Order Items" : {
...

    },
    "Services" : {
      "comment" : "A label describing the section of the sync status view related to the services.",
      "isCommentAutoGenerated" : true
    },
    "Settings" : {

    },
    "Share" : {

    },
    "Share Dashboard" : {
...
